infrastructure/system/heimdall/heimdall.yaml
apiVersion: v1
kind: Service
metadata:
  name: heimdall-service
spec:
  selector:
    app: heimdall
  ports:
    - name: web
      protocol: TCP
      port: 80
    - name: websecure
      protocol: TCP
      port: 443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall
  labels:
    app: heimdall
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heimdall
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: heimdall
    spec:
      containers:
        - image: ghcr.io/linuxserver/heimdall
          name: heimdall
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: web
              protocol: TCP
            - containerPort: 443
              name: websecure
              protocol: TCP
          volumeMounts:
            - name: heimdall-longhorn-volume
              mountPath: /config
              subPath: config
      volumes:
        - name: heimdall-longhorn-volume
          persistentVolumeClaim:
            claimName: heimdall-pvc
